Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/SAP_Order_Items__c.object-meta.xml
<CustomObject>
    <description>These are the related items to SAP_Order_Summary__c</description>
    <label>PKI Order Items</label>
    <nameField>
        <label>Order Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PKI Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>