Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/actual_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>actual_Order_Number__c</fullName>
    <label>SAP Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>