Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Billing_Block_Description__c.field-meta.xml
<CustomField>
    <fullName>Billing_Block_Description__c</fullName>
    <label>Billing Block Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>