Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <description>This is for display Yes or Blank on screen when an item is Blocked</description>
    <formula>IF (fxIsBlocked__c = 1, &quot;Yes&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blocked</label>
    <type>Text</type>
</CustomField>