Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Customer_Specific_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Specific_Price__c</fullName>
    <label>Customer Specific Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>