Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Delivery_Info_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Info_Carrier__c</fullName>
    <label>Delivery Info Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>