Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Freight_Forwarder__c.field-meta.xml
<CustomField>
    <fullName>Freight_Forwarder__c</fullName>
    <label>Freight Forwarder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>