Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/fxCountOfUrls__c.field-meta.xml
<CustomField>
    <fullName>fxCountOfUrls__c</fullName>
    <description>This will count the number of tracking URLs are related to this Item. This field is used in an integration &amp; formula to determine whether or not tracking info is needed</description>
    <label>fxCountOfUrls</label>
    <summaryFilterItems>
        <field>SAP_Order_Item_Tracking__c.TrackingURL__c</field>
        <operation>notEqual</operation>
        <value />
    </summaryFilterItems>
    <summaryForeignKey>SAP_Order_Item_Tracking__c.PKIOrderItems__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>