Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/fxIsBlocked__c.field-meta.xml
<CustomField>
    <fullName>fxIsBlocked__c</fullName>
    <description>If both fields are blank, we have 0, if any field is not blank, we have a 1. Then Order Summary SUMs this field, and if the SUM is greater than 0, the order is Not Clear</description>
    <formula>/*IF(  ISBLANK(Line_Item_Block_Description__c) &amp;&amp; ISBLANK(Line_Item_Block__c) &amp;&amp;  isRemoved__c=false , 0, 1)*/

/* Join all fields to look for characters, and trim whitespace
then see if field is marked as removed*/

IF (
LEN( TRIM( Billing_Block_Code__c 
&amp; Billing_Block_Description__c 
&amp; Delivery_Block_Code__c 
&amp; Delivery_Block_Description__c 
&amp; Line_Item_Block__c 
&amp; Line_Item_Block_Description__c ))=0  &amp;&amp;  isRemoved__c=false , 0, 1)</formula>
    <label>fxIsBlocked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>