Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/fxPercentageShipped__c.field-meta.xml
<CustomField>
    <fullName>fxPercentageShipped__c</fullName>
    <description>This calculates the percentage shipped from Quantity Confirmed and Quantity Shipped</description>
    <formula>if (Quantity_Confirmed__c &gt; 0, Quantity_Shipped__c   / Quantity_Confirmed__c , IF(Quantity_Ordered__c &gt;0,  Quantity_Shipped__c   / Quantity_Ordered__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxPercentageShipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>