Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/isCOVID__c.field-meta.xml
<CustomField>
    <fullName>isCOVID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true for covid related item</description>
    <label>isCOVID</label>
    <type>Checkbox</type>
</CustomField>