Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/item_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>item_Last_Modified_Date__c</fullName>
    <label>Item Last Modified Date</label>
    <type>Date</type>
</CustomField>