Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/item_last_updated__c.field-meta.xml
<CustomField>
    <fullName>item_last_updated__c</fullName>
    <label>item_last_updated</label>
    <type>DateTime</type>
</CustomField>