Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Line_Is_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Line_Is_Rejected__c</fullName>
    <label>Line Is Rejected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>