Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Line_Item_Block_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Block_Description__c</fullName>
    <description>LineItemBlockDescription</description>
    <label>Line Item Block Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>