Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Line_Item_Number_Web__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Number_Web__c</fullName>
    <label>Line Item Number Web</label>
    <length>255</length>
    <type>Text</type>
</CustomField>