Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <label>Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>