Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Net_Currency__c.field-meta.xml
<CustomField>
    <fullName>Net_Currency__c</fullName>
    <label>Net Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>