Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Price__c</fullName>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>