Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Value__c</fullName>
    <label>Net Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>