Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Promotional_Discount__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Discount__c</fullName>
    <label>Promotional Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>