Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Shipment_Created_On__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Created_On__c</fullName>
    <label>Shipment Created On</label>
    <type>Date</type>
</CustomField>