Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/Shipping_Point__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Point__c</fullName>
    <label>Shipping Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>