Perkin-UAT/force-app/main/default/objects/SAP_Order_Items__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>